# Tri-GoL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  devenv.nix  main.cpp
include/: constants.hpp  utils.hpp
src/: main.cpp  utils.cpp
tests/: test_execute_rule.cpp  test_utils.cpp
